# czech-entry-helper

./: .gitignore  README.md  TODO.txt  gui.py  pyproject.toml
czech_entry_helper/: automatic_entry_creation.py  czech_comparatives.py  find_adv_for_adj.py
